Remove backface-visibility on font-icons, this fixes "distortion" on animated icons (e.g. loading icon) in Firefox 54.

--- a/skins/elastic/styles/styles.less
+++ b/skins/elastic/styles/styles.less
@@ -101,8 +101,6 @@ button, input, select, textarea {
     font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
 }
 
 @-webkit-keyframes fa-spin {
